--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
   },
@@ -34,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "caniuse-lite": "^1.0.30001690"
   }
 }
